# BlogApp

./: .gitignore  README.md  build.gradle  local.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/org/zzrblog/blogapp/: IFFmpegAIDLInterface.aidl  ITestAIDLInterface.aidl
app/src/main/cpp/: log_common.h  native-lib.c  native-lib.cpp  zzr_blog_common.h
app/src/main/cpp/common/: common.c  log_common.h  zzr_common.h
app/src/main/cpp/ffmpeg/: AVPacket_buffer.c  AVPacket_buffer.h  sync_player.c  zzr_ffmpeg_player.c  zzr_ffmpeg_util.c  zzr_ffmpeg_util.cpp
app/src/main/cpp/ffmpeg/include/libavcodec/: avcodec.h  version.h
app/src/main/cpp/ffmpeg/include/libavdevice/: avdevice.h  version.h
app/src/main/cpp/ffmpeg/include/libavfilter/: avfilter.h  version.h
app/src/main/cpp/ffmpeg/include/libavformat/: avio.h  version.h
app/src/main/cpp/ffmpeg/include/libavutil/: common.h  pixfmt.h
app/src/main/cpp/ffmpeg/include/libpostproc/: postprocess.h  version.h
app/src/main/cpp/ffmpeg/include/libswresample/: swresample.h  version.h
app/src/main/cpp/ffmpeg/include/libswscale/: version.h
app/src/main/cpp/fmod/: common.cpp  common_platform.cpp  effect_sound.cpp
app/src/main/cpp/fmod/inc/: fmod_common.h  fmod_dsp.h  fmod_dsp_effects.h
app/src/main/cpp/libyuv/: libyuv.h
app/src/main/cpp/rtmppush/: queue.c  queue.h  rtmp_push.c
app/src/main/cpp/rtmppush/faac/include/: faac.h  faaccfg.h
app/src/main/java/org/zzrblog/: FFmpegAIDLService.java  MainActivity.java  MultiProcessActivity.java  PermissionUtils.java  ZzrApplication.java
app/src/main/java/org/zzrblog/blogapp/: MainActivity.java
app/src/main/java/org/zzrblog/blogapp/cube/: CubeActivity.java  CubeRenderer.java
app/src/main/java/org/zzrblog/blogapp/data/: FrameBuffer.java  IndexBuffer.java  VertexArray.java  VertexBuffer.java
app/src/main/java/org/zzrblog/blogapp/hockey/: HockeyActivity.java  HockeyRenderer.java  HockeyRenderer2.java  HockeyRenderer3.java
app/src/main/java/org/zzrblog/blogapp/objects/: Ball.java  Cube.java  CubeIndex.java  Mallet.java  PanoramaBall.java  Puck.java  Table.java
app/src/main/java/org/zzrblog/blogapp/panorama/: PanoramaActivity.java  PanoramaRenderer.java  PanoramaRenderer2.java
app/src/main/java/org/zzrblog/blogapp/program/: BallShaderProgram.java  ColorShaderProgram.java  CubeShaderProgram.java  ShaderProgram.java  TextureShaderProgram.java
app/src/main/java/org/zzrblog/blogapp/utils/: CameraViewport.java  Constants.java  Geometry.java  LoggerConfig.java  MatrixHelper.java  ObjectBuilder.java  ShaderHelper.java  TextResourceReader.java  TextureHelper.java
app/src/main/java/org/zzrblog/camera/: ContinuousRecordActivity.java
app/src/main/java/org/zzrblog/camera/component/: CameraRecordEncoder.java  CameraRecordEncoderCore.java  CameraRecordEncoderCore2.java
app/src/main/java/org/zzrblog/camera/gles/: EglCore.java  EglSurfaceBase.java  GlUtil.java  WindowSurface.java
app/src/main/java/org/zzrblog/camera/objects/: FBOFrameRect.java  FrameRect.java  WaterSignature.java
app/src/main/java/org/zzrblog/camera/program/: FrameRectSProgram.java  ShaderProgram.java  WaterSignSProgram.java
app/src/main/java/org/zzrblog/camera/util/: AspectFrameLayout.java  CameraUtils.java
app/src/main/java/org/zzrblog/camera2/: AutoFitTextureView.java  BaseFragment.java  Camera2BasicActivity.java  Camera2BasicFragment.java
app/src/main/java/org/zzrblog/ffmp/: FFmpDecoderActivity.java  FFmpEncoderActivity.java  FFmpegAIDLService.java  FFmpegTestActivity.java  NativeAVEncodeActivity.java  RtmpPusher.java  SyncPlayer.java  ZzrFFPlayer.java  ZzrFFmpeg.java
app/src/main/java/org/zzrblog/fmod/: EffectActivity.java  FmodActivity.java  VoiceEffectUtils.java
app/src/main/java/org/zzrblog/mp/: FFmpegAIDLService.java  MultiProcessActivity.java  TestAIDLService.java  ZzrFFPlayer.java  ZzrFFmpeg.java
app/src/main/java/org/zzrblog/util/: CameraHelper.java  CameraListener.java
app/src/main/res/drawable/: btn_background.xml
app/src/main/res/layout/: activity_camera2basic.xml  activity_ffmpeg_decoder_test.xml  activity_ffmpeg_encoder_test.xml  activity_ffmpeg_test.xml  activity_fmod_effect.xml  activity_home.xml  activity_mp_enter.xml  activity_mp_test.xml  continuous_record.xml  fragment_camera2_basic.xml
app/src/main/res/raw/: ball_fs.glsl  ball_vs.glsl  cube_one_fs.glsl  cube_one_vs.glsl  simple_fragment_shader.glsl  simple_vertex_shader.glsl  texture_vertex_shader.glsl
app/src/main/res/values/: strings.xml
